--- a/translations/kangyur/placeholders/068-008_toh274-the_sutra_of_the_crown_ornament_of_the_buddhas.xml
+++ b/translations/kangyur/placeholders/068-008_toh274-the_sutra_of_the_crown_ornament_of_the_buddhas.xml
@@ -13,11 +13,11 @@
                 <author role="translatorEng" xml:id="UT22084-068-008-2">Sophie McGrath</author>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.3 <date>2023</date>
+                <edition>v 0.0.4 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="3"/>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-068-008"/>
                 <date/>
             </publicationStmt>
@@ -45,6 +45,12 @@
                 </change>
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.3" xml:id="UT22084-068-008-6">
                     <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-04-09T14:35:20.897Z" type="translation-status" status="2.h" xml:id="UT22084-068-008-7">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-04-09T14:35:20.897Z" type="text-version" status="0.0.4" xml:id="UT22084-068-008-8">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
