--- a/translations/kangyur/placeholders/077-006_toh365-performance_of_the_initiation.xml
+++ b/translations/kangyur/placeholders/077-006_toh365-performance_of_the_initiation.xml
@@ -10,11 +10,11 @@
                 <title type="otherTitle" xml:lang="en">[Note: an extract from the 3rd and 5th chapters of the Kālacakra Laghutantra]</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2024</date>
+                <edition>v 0.0.2 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="4"/>
+                <availability status=""/>
                 <idno xml:id="UT22084-077-006"/>
             </publicationStmt>
             <sourceDesc>
@@ -39,6 +39,12 @@
                 </change>
                 <change who="#line-tofte" when="2024-03-26T08:04:08.87Z" type="text-version" status="0.0.1" xml:id="UT22084-077-006-3">
                     <desc>User set version to 0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2024-04-10T06:56:20.099Z" type="translation-status" status="" xml:id="UT22084-077-006-4">
+                    <desc/>
+                </change>
+                <change who="#line-tofte" when="2024-04-10T06:56:20.099Z" type="text-version" status="0.0.2" xml:id="UT22084-077-006-5">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
