--- a/translations/kangyur/placeholders/096-067_toh818,1102,4401-verses_of_wellwishing.xml
+++ b/translations/kangyur/placeholders/096-067_toh818,1102,4401-verses_of_wellwishing.xml
@@ -9,11 +9,11 @@
                 <title type="mainTitle" xml:lang="en">Verses of Well-wishing</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2024</date>
+                <edition>v 0.0.3 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="4"/>
+                <availability status=""/>
                 <idno xml:id="UT22084-096-067"/>
             </publicationStmt>
             <sourceDesc>
@@ -60,6 +60,12 @@
                 </change>
                 <change who="#john" when="2024-03-06T15:28:41.498Z" type="text-version" status="0.0.2" xml:id="UT22084-096-067-4">
                     <desc>Added Toh 4401 triplicate</desc>
+                </change>
+                <change who="#line-tofte" when="2024-04-10T06:58:52.09Z" type="translation-status" status="" xml:id="UT22084-096-067-5">
+                    <desc/>
+                </change>
+                <change who="#line-tofte" when="2024-04-10T06:58:52.09Z" type="text-version" status="0.0.3" xml:id="UT22084-096-067-6">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
