--- a/translations/kangyur/placeholders/101-153_toh1097,4396-the_prayer_of_sublime_action.xml
+++ b/translations/kangyur/placeholders/101-153_toh1097,4396-the_prayer_of_sublime_action.xml
@@ -9,11 +9,11 @@
                 <title type="mainTitle" xml:lang="en">The Prayer of Sublime Action</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2024</date>
+                <edition>v 0.0.3 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="4"/>
+                <availability status=""/>
                 <idno xml:id="UT22084-101-153"/>
             </publicationStmt>
             <sourceDesc>
@@ -51,6 +51,12 @@
                 </change>
                 <change who="#john" when="2024-03-06T15:30:08.214Z" type="text-version" status="0.0.2" xml:id="UT22084-101-153-4">
                     <desc>Added Toh 4396 duplicate</desc>
+                </change>
+                <change who="#line-tofte" when="2024-04-10T07:00:34.578Z" type="translation-status" status="" xml:id="UT22084-101-153-5">
+                    <desc/>
+                </change>
+                <change who="#line-tofte" when="2024-04-10T07:00:34.578Z" type="text-version" status="0.0.3" xml:id="UT22084-101-153-6">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
