--- a/translations/kangyur/placeholders/101-079_toh1024-the_incantation_for_calming_suffering.xml
+++ b/translations/kangyur/placeholders/101-079_toh1024-the_incantation_for_calming_suffering.xml
@@ -12,13 +12,14 @@
                 <author role="translatorMain" xml:id="UT22084-101-079-1">84000 Associate Translators</author>
                 <author role="translatorEng" xml:id="UT22084-101-079-2">Catherine Dalton</author>
                 <editor role="projectEditor" xml:id="UT22084-101-079-20">Ryan Damron</editor>
+                <editor role="copyEditor" xml:id="UT22084-101-079-30">Konchog Norbu</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.12 <date>2024</date>
+                <edition>v 0.0.14 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.e"/>
+                <availability status="2.d"/>
                 <idno xml:id="UT22084-101-079"/>
                 <date/>
             </publicationStmt>
@@ -90,6 +91,15 @@
                     <desc>2.e</desc>
                 </change>
                 <change who="#line-tofte" when="2024-04-09T09:40:11.338Z" type="text-version" status="0.0.12" xml:id="UT22084-101-079-26">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-04-09T09:40:51.326Z" type="text-version" status="0.0.13" xml:id="UT22084-101-079-31">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-04-10T12:11:48.66Z" type="translation-status" status="2.d" xml:id="UT22084-101-079-32">
+                    <desc>2.d</desc>
+                </change>
+                <change who="#line-tofte" when="2024-04-10T12:11:48.66Z" type="text-version" status="0.0.14" xml:id="UT22084-101-079-33">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
