--- a/translations/kangyur/translations/042-003_toh62-the_questions_of_rastrapala.xml
+++ b/translations/kangyur/translations/042-003_toh62-the_questions_of_rastrapala.xml
@@ -30,7 +30,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-042-003-321953">Ryan Damron</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.19 <date>2024</date>
+                <edition>v 1.0.21 <date>2024</date>
                 </edition>
             </editionStmt>
 
@@ -208,6 +208,12 @@
                 </change>
                 <change who="#celso" when="2024-02-07T01:57:13.865Z" type="text-version" status="1.0.19" xml:id="UT22084-042-003-322001">
                     <desc>Corrected Skt attestations</desc>
+                </change>
+                <change who="#celso" when="2024-02-27T22:24:16.173Z" type="text-version" status="1.0.20" xml:id="UT22084-042-003-322002">
+                    <desc>updated Kangyur sigla to match rKTS</desc>
+                </change>
+                <change who="#andre" when="2024-04-10T13:49:57.491Z" type="text-version" status="1.0.21" xml:id="UT22084-042-003-322003">
+                    <desc>Spelling brahmaṇa corrected to brāhmaṇa</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -446,7 +452,7 @@
                         illuminates the whole world like a huge mass of flames, his radiance blazing brightly like the king of precious jewels among
                         the entire assortment of precious jewels, which is the splendor of all gods.<note place="end" xml:id="UT22084-042-003-43"> We
                             follow the Sanskrit <foreign xml:lang="Sa-Ltn" type="term">prabhāsa</foreign>.</note> Pervading the trichiliocosm with his
-                        splendor, he had become swift<note place="end" xml:id="UT22084-042-003-44"> “Swift” here translates Skt. <foreign xml:lang="Sa-Ltn" type="term">āśu</foreign>, which is missing in the Tibetan version of the text (D and K<hi rend="subscript">Q</hi>).</note> in determining the meaning, and had perfectly attained all excellent qualities. He
+                        splendor, he had become swift<note place="end" xml:id="UT22084-042-003-44"> “Swift” here translates Skt. <foreign xml:lang="Sa-Ltn" type="term">āśu</foreign>, which is missing in the Tibetan version of the text (D and K<!--KQ-->).</note> in determining the meaning, and had perfectly attained all excellent qualities. He
                         resided in the assembly, intoned the melodious Brahmā voice, and taught the Dharma, endowed with a speech that makes all
                         sentient beings understand. He accurately taught pure conduct, the Dharma that is<note place="end" xml:id="UT22084-042-003-45">“The Dharma that is” is added here for clarity.</note> good in the beginning, good in the middle, and good in the end,
                         which is of good meaning, in good words, unadulterated, completely perfect, completely pure, and completely purified.</p>
@@ -469,7 +475,7 @@
                         <l>Is beautiful, though located in the middle of the ocean,</l>
                         <l>Out of compassion<note place="end" xml:id="UT22084-042-003-49"> We understand Skt. <foreign xml:lang="Sa-Ltn" type="term">kṛpasāgara</foreign> here as a third-case <foreign xml:lang="Sa-Ltn" type="term">tatpuruṣa</foreign>, which means
                                 that the original Tibetan should read <foreign xml:lang="Bo-Ltn" type="term">thugs rjes rgya mtsho</foreign> instead
-                                    <foreign xml:lang="Bo-Ltn" type="term">of thugs rje’i rgya mtsho</foreign> (D) or <foreign xml:lang="Bo-Ltn" type="term">thugs rje rgya mtsho</foreign> (K<hi rend="subscript">Q</hi>).</note> you dwell in the middle of the
+                                    <foreign xml:lang="Bo-Ltn" type="term">of thugs rje’i rgya mtsho</foreign> (D) or <foreign xml:lang="Bo-Ltn" type="term">thugs rje rgya mtsho</foreign> (K<!--KQ-->).</note> you dwell in the middle of the
                             ocean of suffering,</l>
                         <l>Sending forth hundreds of thousands of light rays. {2}</l>
                     </lg>
@@ -1221,7 +1227,7 @@
                     <lg tid="145">
                         <l> “Having heard about their bad conduct</l>
                         <l>And improper, exceedingly evil way of living here, <note place="end" xml:id="UT22084-042-003-173"> We follow Sanskrit
-                                    <foreign xml:lang="Sa-Ltn" type="term">iha</foreign>, which is also supported by K<hi rend="subscript">Q</hi>.</note>
+                                    <foreign xml:lang="Sa-Ltn" type="term">iha</foreign>, which is also supported by K<!--KQ-->.</note>
                         </l>
                         <l>Always practice uninterruptedly the path to enlightenment.</l>
                         <l>Beware—you are sure to be reborn and suffer in the lower realms! {90}</l>
@@ -1260,7 +1266,7 @@
                         <l> “Those who desire to awaken to genuine enlightenment</l>
                         <l>Avoid, like a pot of vomit,</l>
                         <l>Those who reject the Dharma of the supreme ones among men,</l>
-                        <l>Which is peaceful, passionless, and ambrosia-like.<note place="end" xml:id="UT22084-042-003-180"> We follow K<hi rend="subscript">Q</hi>: <foreign xml:lang="Bo-Ltn" type="term">mthun</foreign> instead of <foreign xml:lang="Bo-Ltn" type="term">’thung</foreign>.</note> {94}</l>
+                        <l>Which is peaceful, passionless, and ambrosia-like.<note place="end" xml:id="UT22084-042-003-180"> We follow K<!--KQ-->: <foreign xml:lang="Bo-Ltn" type="term">mthun</foreign> instead of <foreign xml:lang="Bo-Ltn" type="term">’thung</foreign>.</note> {94}</l>
                     </lg>
                     <milestone unit="chunk" xml:id="UT22084-042-003-181"/>
                     <lg tid="152">
@@ -1433,7 +1439,7 @@
                     <lg tid="176">
                         <l>“For the sake of the lives of a tigress and her cubs,</l>
                         <l>I satiated the tigress by sacrificing my body.</l>
-                        <l>From the heavens, hosts of gods<note place="end" xml:id="UT22084-042-003-210"> We follow K<hi rend="subscript">Q</hi>,
+                        <l>From the heavens, hosts of gods<note place="end" xml:id="UT22084-042-003-210"> We follow K<!--KQ-->,
                                 where “gods” is in the ergative (Tib. <foreign xml:lang="Bo-Ltn" type="term">kyis</foreign>).</note> proclaimed,</l>
                         <l>‘Excellent, great being with firm effort!’ {115}</l>
                     </lg>
@@ -3269,7 +3275,7 @@
                         <l>And is honored by gods, men, and nāgas.’ {328}</l>
                     </lg>
                     <milestone unit="chunk" xml:id="UT22084-042-003-533"/>
-                    <p tid="430">“At this point, Rāṣṭrapāla, the day was dawning,<note place="end" xml:id="UT22084-042-003-534"> Following K<hi rend="subscript">Q</hi>, we emend D: <foreign xml:lang="Bo-Ltn" type="quote">nam nangs pa</foreign> to <foreign xml:lang="Bo-Ltn" type="quote">mtshan mo de’i nam langs pa</foreign>.</note> and King Arciṣmān heard the sound of
+                    <p tid="430">“At this point, Rāṣṭrapāla, the day was dawning,<note place="end" xml:id="UT22084-042-003-534"> Following K<!--KQ-->, we emend D: <foreign xml:lang="Bo-Ltn" type="quote">nam nangs pa</foreign> to <foreign xml:lang="Bo-Ltn" type="quote">mtshan mo de’i nam langs pa</foreign>.</note> and King Arciṣmān heard the sound of
                         weeping in the quarters of the young prince’s women. Having heard it, he went with great haste<note place="end" xml:id="UT22084-042-003-535"> Literally, “very quickly with a hasty appearance” (Tib. <foreign xml:lang="Bo-Ltn" type="quote">myur ba myur bar rings pa’i gzugs kyis</foreign>).</note> to the city of Ratipradhāna. Upon arriving
                         there, he asked, ‘Why are you weeping?’ They answered, ‘Because prince Puṇyaraśmi is not here.’ Then, Rāṣṭrapāla, King
                         Arciṣmān, for the sake of the prince, fell to the ground like a felled tree. Upon rising, he wept and searched the city a
@@ -3604,14 +3610,13 @@
                         <abbr>H</abbr>
                         <expan>Lhasa (Zhol)</expan>
                     </item>
+                    <item xml:id="UT22084-042-003-600">
+                        <abbr>K<!--KQ--></abbr>
+                        <expan>Peking <!--1737-->1684/1692 (<!--Qianlong-->Kangxi)</expan>
+                    </item>
                     <item xml:id="UT22084-042-003-599">
                         <abbr>N</abbr>
                         <expan>Narthang</expan>
-                    </item>
-                    <item xml:id="UT22084-042-003-600">
-                        <abbr>K<hi rend="subscript">Q</hi>
-                        </abbr>
-                        <expan>Peking 1737 (Qianlong)</expan>
                     </item>
                 </list>
             </div>
@@ -3780,7 +3785,7 @@
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">dge sbyong</term>
                             <term xml:lang="bo" type="attestedSource" n="1">དགེ་སྦྱོང་།</term>
                             <note type="definition">
-                                <p>In Indic literature, the term <foreign xml:lang="Sa-Ltn">śramaṇa</foreign> is used to denote a spiritual practitioner who emphasizes the renunciation of worldly life for a life of austerity and monasticism. Buddhism and Jainism, among others, are considered <foreign xml:lang="Sa-Ltn">śramaṇa</foreign> traditions. The term is often used in contrast to <foreign xml:lang="Sa-Ltn">brahmaṇa</foreign>, “brahmin,” in reference to a follower of the Vedic tradition, which emphasizes a householder lifestyle as the basis for spiritual practice.</p>
+                                <p>In Indic literature, the term <foreign xml:lang="Sa-Ltn">śramaṇa</foreign> is used to denote a spiritual practitioner who emphasizes the renunciation of worldly life for a life of austerity and monasticism. Buddhism and Jainism, among others, are considered <foreign xml:lang="Sa-Ltn">śramaṇa</foreign> traditions. The term is often used in contrast to <foreign xml:lang="Sa-Ltn">brāhmaṇa</foreign>, “brahmin,” in reference to a follower of the Vedic tradition, which emphasizes a householder lifestyle as the basis for spiritual practice.</p>
                             </note>
                         </gloss>
                     </item>
