--- a/translations/kangyur/translations/072-017_toh317-distinctly_ascertaining_the_meanings.xml
+++ b/translations/kangyur/translations/072-017_toh317-distinctly_ascertaining_the_meanings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?xml-model href="../../../schema/current/translation.rng" schematypens="http://relaxng.org/ns/structure/1.0"?>
-<tei:TEI xmlns="http://www.tei-c.org/ns/1.0" xmlns:tei="http://www.tei-c.org/ns/1.0">
+<TEI xmlns="http://www.tei-c.org/ns/1.0">
         <teiHeader>
                 <fileDesc>
                         <titleStmt>
@@ -26,7 +26,7 @@
                                 <editor role="TEImarkupEditor" xml:id="UT22084-072-017-577">Laura Goetz</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.13 <date>2023</date>
+                <edition>v 1.0.14 <date>2024</date>
                 </edition>
             </editionStmt>
 
@@ -181,6 +181,9 @@
                 </change>
                 <change who="#martina-cotter" when="2023-10-23T21:18:55.815Z" type="text-version" status="1.0.13" xml:id="UT22084-072-017-616">
                     <desc>updated ellipsis.</desc>
+                </change>
+                <change who="#andre" when="2024-04-10T14:00:10.68Z" type="text-version" status="1.0.14" xml:id="UT22084-072-017-617">
+                    <desc>Spelling brahmaṇa corrected to brāhmaṇa</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -674,7 +677,7 @@
                                                         that the order differs in Fe and ANe (Samtani 1971, p. 11, n. 5). See also the <title xml:lang="Sa-Ltn">Nibandhana</title> (Samtani 1971, pp. 140–41) for useful
                                                         explanations of the <term rend="ignore">names</term> of these different classes of
                                                         deities.</note> What is existence with form? It is the deities of the Brahmā group up to the
-                                                deities of Lesser than None. This is explained as existence with form.<note place="end" xml:id="UT22084-072-017-76"> Here the Sanskrit reads <foreign xml:lang="Sa-Ltn" type="quote">tatra rūpa­bhavaḥ katamaḥ tadyathā brahma­kāyikāḥ brahma­purohitāḥ mahā­brahmaṇaḥ
+                                                deities of Lesser than None. This is explained as existence with form.<note place="end" xml:id="UT22084-072-017-76"> Here the Sanskrit reads <foreign xml:lang="Sa-Ltn" type="quote">tatra rūpa­bhavaḥ katamaḥ tadyathā brahma­kāyikāḥ brahma­purohitāḥ mahā­brāhmaṇaḥ
                                                                 parīttābhāḥ apramāṇābhāḥ ābhāsvarāḥ parītta­śubhāḥ śubha­kṛtsnāḥ anabhrakāḥ
                                                                 puṇya­prasavāḥ bṛhat­phalāḥ avṛhāḥ atapāḥ sudṛśāḥ sudarśanāḥ akaniṣṭhāś ceti</foreign>
                                                         (Samtani 1971, p. 12). This could be translated as “What, then, is existence with form? It is
@@ -4267,4 +4270,4 @@
                         </div>
                 </back>
         </text>
-</tei:TEI>
+</TEI>
